<resources>
    <string name="app_name" translatable="false">AndroidCourse</string>
    <string name="error_username_empty">Username cannot be empty</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="username_label">Username:</string>
    <string name="username">username</string>
    <string name="password_label">Password:</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="image_size_default">w185</string>
</resources>
